--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,7 @@
         "GitHub.copilot",
         "GitHub.copilot-chat",
         "EditorConfig.EditorConfig",
-        "Pkief.material-icon-theme",
+        "vscode-icons-team.vscode-icons",
         "vscjava.vscode-gradle",
         "wmanth.jar-viewer"
       ],
